package SitsFramework;

public enum TipoProcessamento {
    CINZA,
    BINARIZACAO,
    BORDA,
    NEGATIVO,
    CONTRASTE
}
